methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  for (case <- 1 to 6) {
    if (estSurBiscuit()==true){
      vuBiscuit=true
    }
    else{
      avance()}
  }
  if (estSurBiscuit()==true){
    vuBiscuit=true}
  recule(6)
  return vuBiscuit
}